First version of template picker and chooser done

--- a/style/components/item/item.scss
+++ b/style/components/item/item.scss
@@ -24,6 +24,16 @@
     cursor: pointer;
 }
 
+.fatex__item__duplicate {
+    @include fa-icon($fa-var-copy);
+    cursor: pointer;
+}
+
+.fatex__item__choose {
+    @include fa-icon($fa-var-file-medical);
+    cursor: pointer;
+}
+
 .fatex__item__sort {
     @include fa-icon($fa-var-sort);
     cursor: move;
