--- a/system/fatex.css
+++ b/system/fatex.css
@@ -127,56 +127,82 @@
     pointer-events: all; }
 
 .fatex__item__add {
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
   cursor: pointer; }
   .fatex__item__add:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     content: "\f067"; }
 
 .fatex__item__settings {
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
   cursor: pointer; }
   .fatex__item__settings:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     content: "\f013"; }
 
+.fatex__item__duplicate {
+  cursor: pointer; }
+  .fatex__item__duplicate:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    content: "\f0c5"; }
+
+.fatex__item__choose {
+  cursor: pointer; }
+  .fatex__item__choose:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    content: "\f477"; }
+
 .fatex__item__sort {
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
   cursor: move; }
   .fatex__item__sort:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     content: "\f0dc"; }
 
 .fatex__item__delete {
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
   transition: color 0.2s;
   cursor: pointer; }
   .fatex__item__delete:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     content: "\f1f8"; }
   .fatex__item__delete:hover {
     color: #f21628; }
@@ -255,16 +281,16 @@
   width: 100%;
   text-align: center;
   font-size: 25px;
-  opacity: 0;
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased; }
+  opacity: 0; }
   .fatex__stress__track__item__icon:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     content: "\f00d"; }
 
 .fatex__stress__track__filler {
@@ -452,16 +478,16 @@ div.fatex__consequence--condition {
   width: 100%;
   text-align: center;
   font-size: 18px;
-  opacity: 0;
-  font-weight: 900;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased; }
+  opacity: 0; }
   .fatex__consequence__box__icon:before {
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
     content: "\f00d"; }
 
 .fatex__tabs {
@@ -900,17 +926,68 @@ input[type=range]::-moz-range-thumb {
   display: block; }
 
 .fatex__templates {
-  padding: 10px; }
+  padding: 10px;
+  display: flex;
+  align-items: center; }
 
-.fatex__template__actions {
-  opacity: 1;
-  pointer-events: all; }
+.fatex__template__break {
+  width: 100%; }
+
+.fatex__template {
+  min-width: 200px; }
+
+.fatex__template + .fatex__template {
+  margin-left: 10px; }
 
 .fatex__template__create {
   cursor: pointer; }
 
 .fatex__template__header__settings {
   cursor: pointer; }
+
+.fatex__template__information {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: min-content auto;
+  grid-auto-rows: auto;
+  column-gap: 20px;
+  margin-bottom: 10px; }
+
+.fatex__template__create {
+  white-space: nowrap; }
+
+.fatex__template__information__name {
+  font-weight: bold; }
+  .fatex__template__information__name::after {
+    content: ":"; }
+
+.fatex__template__actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .fatex__template__actions > span {
+    text-align: center;
+    color: white;
+    background: #2f3542;
+    padding: 5px;
+    border-radius: 5px; }
+    .fatex__template__actions > span:before {
+      margin-right: 10px; }
+  .fatex__template__actions span + span {
+    margin-top: 5px; }
+
+.fatex__template__image {
+  height: 125px;
+  background-position: center center;
+  background-size: cover;
+  margin: 10px;
+  border-radius: 5px; }
+
+.fatex__template__or {
+  text-transform: uppercase;
+  padding: 20px;
+  font-size: 30px;
+  font-weight: bold; }
 
 .fatex__message {
   margin: 10px;
