--- a/style/components/templates/templates.scss
+++ b/style/components/templates/templates.scss
@@ -1,10 +1,19 @@
 .fatex__templates {
     padding: $component-padding;
+    display: flex;
+    align-items: center;
 }
 
-.fatex__template__actions {
-    opacity: 1;
-    pointer-events: all;
+.fatex__template__break {
+    width: 100%;
+}
+
+.fatex__template {
+    min-width: 200px;
+}
+
+.fatex__template + .fatex__template {
+    margin-left: $component-padding;
 }
 
 .fatex__template__create {
@@ -13,4 +22,64 @@
 
 .fatex__template__header__settings {
     cursor: pointer;
+}
+
+.fatex__template__information {
+    padding: $component-padding;
+    display: grid;
+    grid-template-columns: min-content auto;
+    grid-auto-rows: auto;
+    column-gap: 20px;
+    margin-bottom: $component-padding;
+}
+
+.fatex__template__create {
+    white-space: nowrap;
+}
+
+.fatex__template__information__name {
+    font-weight: bold;
+
+    &::after {
+        content: ":";
+    }
+}
+
+.fatex__template__actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
+    > span {
+        text-align: center;
+
+        color: $headline-color;
+        background: $headline-background;
+        padding: $component-padding / 2;
+        border-radius: 5px;
+
+        &:before {
+            margin-right: $component-padding;
+        }
+    }
+
+    span + span {
+        margin-top: $component-padding / 2;
+    }
+}
+
+.fatex__template__image {
+    height: 125px;
+    background-position: center center;
+    background-size: cover;
+    margin: $component-padding;
+    border-radius: 5px;
+}
+
+.fatex__template__or {
+    text-transform: uppercase;
+    padding: $component-padding * 2;
+    font-size: 30px;
+    font-weight: bold;
 }
