--- a/system/templates/actor/parts/tabloid/aspects.html
+++ b/system/templates/actor/parts/tabloid/aspects.html
@@ -11,7 +11,7 @@
             <label class="fatex__aspect__label fatex__input__label">{{default aspect.data.label "&nbsp;"}}</label>
 
             <div class="fatex__aspect__actions_wrapper">
-                <div class="fatex__aspect__input fatex__input__input">{{default aspect.data.value "&nbsp;"}}</div>
+                <div class="fatex__aspect__input fatex__input__input" contenteditable="true" data-item-id="{{aspect._id}}">{{aspect.data.value}}</div>
 
                 <div class="fatex__aspect__actions fatex__item__actions">
                     <span class="fatex__aspect__sort fatex__item__sort"></span>
