Only allow edit of aspects / consequences in edit mode

--- a/style/components/aspects/aspects.scss
+++ b/style/components/aspects/aspects.scss
@@ -20,4 +20,10 @@
     border-radius: 3px;
     border-bottom: 1px solid $primary-color;
     padding: 3px 0;
+
+    /*cursor: pointer;
+
+    &[contenteditable="true"] {
+        cursor: text;
+    }*/
 }
