--- a/style/components/consequences/consequences.scss
+++ b/style/components/consequences/consequences.scss
@@ -24,6 +24,12 @@ div.fatex__consequence--condition {
     border-radius: 3px;
     border-bottom: 1px solid $primary-color;
     padding: 3px 0;
+
+    /*cursor: pointer;
+
+    &[contenteditable="true"] {
+        cursor: text;
+    }*/
 }
 
 .fatex__consequence__box {
