--- a/style/components/input/input.scss
+++ b/style/components/input/input.scss
@@ -23,6 +23,7 @@
 .fatex__input__input{
     padding-left: calc(#{$component-padding} / 2);
     height: auto;
+    min-height: 24px;
     border: 0;
     border-bottom: 1px solid $primary-color;
     border-radius: 3px;
