--- a/system/fatex.css
+++ b/system/fatex.css
@@ -423,7 +423,12 @@
 .fatex__aspect__input {
   border-radius: 3px;
   border-bottom: 1px solid #2f3542;
-  padding: 3px 0; }
+  padding: 3px 0;
+    /*cursor: pointer;
+
+    &[contenteditable="true"] {
+        cursor: text;
+    }*/ }
 
 .fatex__consequences {
   padding: 10px; }
@@ -443,7 +448,12 @@ div.fatex__consequence--condition {
 .fatex__consequence__input {
   border-radius: 3px;
   border-bottom: 1px solid #2f3542;
-  padding: 3px 0; }
+  padding: 3px 0;
+    /*cursor: pointer;
+
+    &[contenteditable="true"] {
+        cursor: text;
+    }*/ }
 
 .fatex__consequence__box {
   position: absolute;
@@ -548,6 +558,7 @@ div.fatex__consequence--condition {
 .fatex__input__input {
   padding-left: calc(10px / 2);
   height: auto;
+  min-height: 24px;
   border: 0;
   border-bottom: 1px solid #2f3542;
   border-radius: 3px; }
