Added skillreference Items

--- a/system/templates/item/aspect-sheet.html
+++ b/system/templates/item/aspect-sheet.html
@@ -13,12 +13,13 @@
         field = data.label
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{!--Description is disabled for now--}}
+    {{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.html"
         headline = "FAx.Item.Aspect.Description"
         help = "FAx.Item.Aspect.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
-    }}
+    }}--}}
 </div>
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
