--- a/system/templates/item/skill-sheet.html
+++ b/system/templates/item/skill-sheet.html
@@ -16,12 +16,13 @@
         radioItems = availableRanks
     }}
 
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+    {{!--Description is disabled for now--}}
+    {{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.html"
         headline = "FAx.Item.Skill.Description"
         help = "FAx.Item.Skill.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
-    }}
+    }}--}}
 </div>
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
