Remove skillReference item again

--- a/system/templates/item/consequence-sheet.html
+++ b/system/templates/item/consequence-sheet.html
@@ -57,7 +57,7 @@
         field = data.description
     }}--}}
 
-    <div class="fatex__setting">
+    {{!--<div class="fatex__setting">
         <h2 class="fatex__headline fatex__setting__headline">
             <span>Automation</span>
         </h2>
@@ -67,7 +67,7 @@
         {{/each}}
 
         <button class="addReference">Add</button>
-    </div>
+    </div>--}}
 </div>
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
