Make sheet work for 0.5.2 and for 0.7

--- a/system/templates/item/consequence-sheet.html
+++ b/system/templates/item/consequence-sheet.html
@@ -57,17 +57,23 @@
         field = data.description
     }}--}}
 
-    {{!--<div class="fatex__setting">
+    <div class="fatex__setting">
         <h2 class="fatex__headline fatex__setting__headline">
             <span>Automation</span>
         </h2>
 
         {{#each skillReferences as |reference referenceIndex|}}
-            {{reference.name}}
+            <div class="fatex__skill__reference__remove" data-index="{{referenceIndex}}">{{referenceIndex}} - {{reference.skill}}</div>
         {{/each}}
 
-        <button class="addReference">Add</button>
-    </div>--}}
+        {{#each actorSkills as |skillName skillIndex|}}
+            <div>{{skillName}}</div>
+        {{/each}}
+
+
+
+        <button class="fatex__skill__reference__create">Add</button>
+    </div>
 </div>
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
