Added core/condesed data importer again

--- a/system/templates/actor/parts/config.html
+++ b/system/templates/actor/parts/config.html
@@ -1,15 +1,15 @@
 <div class="fatex__sheet_config">
     <h2>Sheet configuration</h2>
 
-    {{!--<div class="fatex__sheet__action fatex__sheet__action--import-core">
-        Import core!
+    <div class="fatex__sheet__action fatex__sheet__action--import-core">
+        Experimental - Import core data (Skills, Consequences etc.)
     </div>
 
     <div class="fatex__sheet__action fatex__sheet__action--import-accelerated">
-        Import accelerated!
+        Experimental - Import accelerated data (Skills, Consequences etc.)
     </div>
 
     <div class="fatex__sheet__action fatex__sheet__action--import-condensed">
-        Import condensed!
-    </div>--}}
+        Experimental - Import condensed data (Skills, Consequences etc.)
+    </div>
 </div>
