Added automation to consequences

--- a/style/components.scss
+++ b/style/components.scss
@@ -25,3 +25,4 @@
 @import "components/biography/biography.scss";
 @import "components/stunt/stunt.scss";
 @import "components/extra/extra.scss";
+@import "components/automation/automation.scss";
