Added automation settings and AND/OR combinations

--- a/style/components/automation/automation.scss
+++ b/style/components/automation/automation.scss
@@ -20,3 +20,7 @@
 .fatex__skill__reference + .fatex__skill__reference {
     margin-top: $component-padding;
 }
+
+.fatex__skill__references__settings {
+    margin-bottom: $component-padding;
+}
