Import style via webpack

--- a/src/scss/extras/fonts.scss
+++ b/src/scss/extras/fonts.scss
@@ -1,47 +1,47 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-Regular.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-Regular.otf');
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-Italic.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-Italic.otf');
     font-style: italic;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-Light.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-Light.otf');
     font-weight: 300;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-LightItalic.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-LightItalic.otf');
     font-style: italic;
     font-weight: 300;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-Bold.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-Bold.otf');
     font-weight: bold;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-BoldItalic.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-BoldItalic.otf');
     font-style: italic;
     font-weight: bold;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-Black.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-Black.otf');
     font-weight: 900;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-BlackItalic.otf');
+    src: url('/systems/fatex/assets/fonts/Montserrat-BlackItalic.otf');
     font-style: italic;
     font-weight: 900;
 }
 
 @font-face {
     font-family: 'Fate Icons';
-    src: url('assets/fonts/fate_icons.ttf');
+    src: url('/systems/fatex/assets/fonts/fate_icons.ttf');
 }
