--- a/src/scss/components/templates/templates.scss
+++ b/src/scss/components/templates/templates.scss
@@ -2,6 +2,7 @@
     padding: $component-padding;
     display: flex;
     align-items: center;
+    min-width: 100%;
 }
 
 .fatex__template__break {
@@ -82,4 +83,25 @@
     padding: $component-padding * 2;
     font-size: 30px;
     font-weight: bold;
+}
+
+.fatex__template__help {
+    font-size: 12px;
+    text-align: center;
+
+    #template-actors & {
+        min-width: 100%;
+    }
+
+    p {
+        margin: $component-padding*2;
+    }
+
+    .fatex__template__header__settings {
+        padding-top: $component-padding * 3;
+
+        span, i {
+            color: $primary-color;
+        }
+    }
 }
