--- a/system/templates/actor/parts/config.html
+++ b/system/templates/actor/parts/config.html
@@ -1,15 +1,3 @@
-<div class="fatex__sheet_config">
+{{!--<div class="fatex__sheet_config">
     <h2>Sheet configuration</h2>
-
-    <div class="fatex__sheet__action fatex__sheet__action--import-core">
-        Experimental - Import core data (Skills, Consequences etc.)
-    </div>
-
-    <div class="fatex__sheet__action fatex__sheet__action--import-accelerated">
-        Experimental - Import accelerated data (Skills, Consequences etc.)
-    </div>
-
-    <div class="fatex__sheet__action fatex__sheet__action--import-condensed">
-        Experimental - Import condensed data (Skills, Consequences etc.)
-    </div>
-</div>
+</div>--}}
