--- a/system/templates/item/parts/layout/item-header.html
+++ b/system/templates/item/parts/layout/item-header.html
@@ -9,7 +9,7 @@
                         {{#if isOwnedBy}}
                             {{ isOwnedBy }}
                         {{else}}
-                            Base item
+                            {{localize FAx.Gloabl.BaseItem}}
                         {{/if}}
                     </label>
                     <div class="fatex__header__title fatex__item__header__title">{{localize title}}</div>
